Add 'Group By' controls to dialog

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -1763,16 +1763,16 @@ BEGIN
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,149,220,1
 END
 
-IDD_ANALYSELOGGEDTIME_DIALOG DIALOG DISCARDABLE  0, 0, 314, 201
+IDD_ANALYSELOGGEDTIME_DIALOG DIALOG DISCARDABLE  0, 0, 333, 214
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Analyse Logged Time"
 FONT 8, "Tahoma"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,203,180,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,257,180,50,14
-    GROUPBOX        "Time Period",IDC_STATIC,7,7,181,111
-    GROUPBOX        "Breakdown",IDC_STATIC,197,7,110,111
-    GROUPBOX        "Output",IDC_STATIC,7,124,300,50
+    DEFPUSHBUTTON   "OK",IDOK,221,192,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,276,192,50,14
+    GROUPBOX        "Time Period",IDC_STATIC,7,7,181,126
+    GROUPBOX        "Breakdown",IDC_STATIC,197,7,129,126
+    GROUPBOX        "Output",IDC_STATIC,7,137,319,50
     CONTROL         "&Today",IDC_TODAY,"Button",BS_AUTORADIOBUTTON | 
                     WS_GROUP,16,20,165,10
     CONTROL         "This &Week",IDC_THISWEEK,"Button",BS_AUTORADIOBUTTON,16,
@@ -1783,24 +1783,32 @@ BEGIN
                     65,165,10
     CONTROL         "&From:",IDC_DATERANGE,"Button",BS_AUTORADIOBUTTON,16,80,
                     59,10
+    CONTROL         "&All Tasks",IDC_ALLTASKS,"Button",BS_AUTORADIOBUTTON,16,
+                    115,161,10
     CONTROL         "DateTimePicker1",IDC_DATEFROM,"SysDateTimePick32",
                     DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,79,77,100,14
+    LTEXT           "T&o:",IDC_STATIC,27,98,50,10,SS_CENTERIMAGE
     CONTROL         "DateTimePicker1",IDC_DATETO,"SysDateTimePick32",
                     DTS_RIGHTALIGN | WS_TABSTOP,79,95,100,14
-    LTEXT           "T&o:",IDC_STATIC,26,98,51,10,SS_CENTERIMAGE
     CONTROL         "By Tas&k",IDC_BYTASK,"Button",BS_AUTORADIOBUTTON | 
-                    WS_GROUP,208,20,90,10
-    CONTROL         "By &Day",IDC_BYDAY,"Button",BS_AUTORADIOBUTTON,208,35,
-                    90,10
-    CONTROL         "By W&eek",IDC_BYWEEK,"Button",BS_AUTORADIOBUTTON,208,50,
-                    90,10
-    CONTROL         "By Mo&nth",IDC_BYMONTH,"Button",BS_AUTORADIOBUTTON,208,
-                    65,90,10
-    COMBOBOX        IDC_OUTPUTFORMAT,79,137,100,109,CBS_DROPDOWNLIST | 
+                    WS_GROUP,206,20,95,10
+    CONTROL         "By &Day",IDC_BYDAY,"Button",BS_AUTORADIOBUTTON,206,35,
+                    95,10
+    CONTROL         "By W&eek",IDC_BYWEEK,"Button",BS_AUTORADIOBUTTON,206,50,
+                    95,10
+    CONTROL         "By Mo&nth",IDC_BYMONTH,"Button",BS_AUTORADIOBUTTON,206,
+                    65,95,10
+    CONTROL         "&Group By",IDC_GROUPBY,"Button",BS_AUTOCHECKBOX | 
+                    WS_GROUP | WS_TABSTOP,206,82,45,10
+    COMBOBOX        IDC_GROUPBYATTRIB,216,95,101,30,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "&Format",IDC_STATIC,16,140,61,8
-    LTEXT           "File &Path",IDC_STATIC,16,156,62,8
-    EDITTEXT        IDC_OUTPUTFILEPATH,79,154,219,13,ES_AUTOHSCROLL
+    COMBOBOX        IDC_GROUPBYCUSTOMATTRIB,216,112,101,30,CBS_DROPDOWNLIST | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "&Format",IDC_STATIC,16,153,61,8
+    COMBOBOX        IDC_OUTPUTFORMAT,79,150,100,109,CBS_DROPDOWNLIST | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "File &Path",IDC_STATIC,16,169,62,8
+    EDITTEXT        IDC_OUTPUTFILEPATH,79,167,240,13,ES_AUTOHSCROLL
 END
 
 IDD_RECURRING_ONCE_PAGE DIALOG DISCARDABLE  0, 0, 254, 84
@@ -1890,7 +1898,7 @@ IDD_TIMETRACK_DIALOG DIALOGEX 0, 0, 134, 111
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_STATICEDGE
 CAPTION "Time Tracker"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     COMBOBOX        IDC_TASKLISTS,4,28,126,128,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
@@ -4097,9 +4105,9 @@ BEGIN
     IDD_ANALYSELOGGEDTIME_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 307
+        RIGHTMARGIN, 326
         TOPMARGIN, 7
-        BOTTOMMARGIN, 194
+        BOTTOMMARGIN, 207
     END
 
     IDD_PREFTOOLBAR_PAGE, DIALOG
