--- a/ContentControl/HTMLContentControl/HTMLContentControlBridge/HTMLContentControlBridge.vcxproj
+++ b/ContentControl/HTMLContentControl/HTMLContentControlBridge/HTMLContentControlBridge.vcxproj
@@ -117,6 +117,7 @@ copy $(TargetDir)$(TargetName).pdb "$(SolutionDir)..\ToDoList_Dev\ToDoList\unico
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
