--- a/UIExension/DayViewUIExtension/DayViewUIExtensionCore/DayViewUIExtensionCore.csproj
+++ b/UIExension/DayViewUIExtension/DayViewUIExtensionCore/DayViewUIExtensionCore.csproj
@@ -58,7 +58,7 @@
     <Compile Include="DayViewPreferencesDlg.Designer.cs">
       <DependentUpon>DayViewPreferencesDlg.cs</DependentUpon>
     </Compile>
-    <Compile Include="TDLDayView.cs" />
+    <Compile Include="TDLCalendarItem.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -66,6 +66,7 @@
     </Compile>
     <Compile Include="DayViewUIExtensionCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TDLDayView.cs" />
     <Compile Include="TDLRenderer.cs">
       <SubType>Code</SubType>
     </Compile>
