--- a/core/TransText/TransText.vcxproj
+++ b/core/TransText/TransText.vcxproj
@@ -104,8 +104,9 @@
     <PostBuildEvent>
       <Command>mkdir ..\ToDoList
 mkdir ..\ToDoList\unicode_Release
+mkdir ..\..\Plugins\release
 copy unicode_release\transtext.dll ..\todolist\unicode_release /y
-copy unicode_release\transtext.dll ..\..\todolist_Plugins\release /y
+copy unicode_release\transtext.dll ..\..\Plugins\release /y
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
